# meta_hackathon

./: .env.example  .gitignore  Dockerfile  README.md  client.py  inference.py  openenv.yaml  pyproject.toml
scripts/: validate-submission.sh
server/: app.py
support_env/: __init__.py  engine.py  models.py  scoring.py  tasks.py  tickets.py
support_env/server/: app.py  environment.py
tests/: test_ticket_engine.py
